--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>OhMyFood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shrikhand&display=swap" rel="stylesheet">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/fced9ef05b.js" crossorigin="anonymous"></script>
 </head>
@@ -17,75 +17,102 @@
 <body>
 
     <header>
-        <a href="#" class="logo"><img src="./images/logo/ohmyfood.png" alt="logo"></a>
+        <a href="#" class="logo">ohmyfood</a>
     </header>
 
     <main>
-        
-        <!---activités à Marseille-->
         <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
         </div>
 
-        <div class="reservation">
+        <section class="reservation">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <a href="#" class="btn"> Explorer nos restaurants</a>
-        </div>
+            <a href="#" class="btn">Explorer nos restaurants</a>
+        </section>
 
-
-        <div class="fonctionnement">
+        <section class="functioning">
             <h2>Fonctionnement</h2>
-            <div class="fonctions">
-                <a href="#"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
-            </div>
+            <button>
+                <span class="badge">1</span>
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                Choisissez un restaurant
+            </button>
+            <button>
+                <span class="badge">2</span>
+                <i class="fa-solid fa-list-ul"></i>
+                Composez votre menu
+            </button>
+            <button>
+                <span class="badge">3</span>
+                <i class="fa-solid fa-store"></i>
+                Dégustez au restaurant
+            </button>
+        </section>
 
-            <div class="fonctions">
-                <a href="#"><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
-            </div>
-
-            <div class="fonctions">
-                <a href="#"><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</a>
-            </div>
-        </div>
-
-        <div class="restaurants">
-                <h2>Restaurants</h2>
-            
-                <a href="">
-                        <article class="restaurantcard">
-                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout">
-                            <h3>La Palette du goût</h3>
-                            <p>Ménimoltant</p>           
-                        </article>
-                </a>
-
-
-                <a href="">
-                    <article class="restaurantcard">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette du gout">
-                        <h3>La Palette du goût</h3>
-                        <p>Ménimoltant</p>           
-                    </article>
-                </a>
-
-                <a href="">
-                    <article class="restaurantcard">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout">
-                        <h3>La Palette du goût</h3>
-                        <p>Ménimoltant</p>           
-                    </article>
-                </a>
-
-                <a href="">
-                    <article class="restaurantcard">
-                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout">
-                        <h3>La Palette du goût</h3>
-                        <p>Ménimoltant</p>           
-                    </article>
-                </a>
-        </div>
+        <section class="eateries">
+            <h2>Restaurants</h2>
+            <a href="./pages/la-palette-du-gout.html">
+                <article>
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+                    <span class="sticker">Nouveau</span>
+                    <div class="eatery-container">
+                        <div class="eatery-desc">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <span class="like">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </article>
+            </a>
+            <a href="./pages/la-note-enchantee.html">
+                <article>
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+                    <span class="sticker">Nouveau</span>
+                    <div class="eatery-container">
+                        <div class="eatery-desc">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <span class="like">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </article>
+            </a>
+            <a href="./pages/a-la-francaise.html">
+                <article>
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" />
+                    <div class="eatery-container">
+                        <div class="eatery-desc">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <span class="like">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </article>
+            </a>
+            <a href="./pages/le-delice-des-sens.html">
+                <article>
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="Le délice des sens" />
+                    <div class="eatery-container">
+                        <div class="eatery-desc">
+                            <h3>Le délice des sens</h3>
+                            <p>Foli-Méricourt</p>
+                        </div>
+                        <span class="like">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </article>
+            </a>
+        </section>
 
 
 
@@ -93,16 +120,11 @@
     </main>
 
     <footer>
-        <nav>
-            <ul>
-                <li class="logo">ohmyfood</li>
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-                <li>Mentions Légales</li>
-                <li>Contact</li>
-
-            </ul>
-        </nav>
+        <h2>ohmyfood</h2>
+        <p><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></p>
+        <p><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></p>
+        <p><a href="#">Mentions légales</a></p>
+        <p class="contact"><a href="mailto:contact@ohmyfood.com">Contact</a></p>
     </footer>
 
 
