--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         </div>
                         <span class="like">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart full"></i>
                         </span>
                     </div>
                 </article>
@@ -79,6 +80,7 @@
                         </div>
                         <span class="like">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart full"></i>
                         </span>
                     </div>
                 </article>
@@ -93,6 +95,7 @@
                         </div>
                         <span class="like">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart full"></i>
                         </span>
                     </div>
                 </article>
@@ -108,6 +111,7 @@
                         </div>
                         <span class="like">
                             <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart full"></i>
                         </span>
                     </div>
                 </article>
