--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 </head>
 
 <body>
+    <div class="spinner">
+        <span class="loader"></span>
+    </div>
 
     <header>
         <a href="#" class="logo">ohmyfood</a>
     </header>
 
-    <main>
+    <main id="home">
         <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
@@ -53,7 +56,7 @@
 
         <section class="eateries">
             <h2>Restaurants</h2>
-            <a href="./pages/la-palette-du-gout.html">
+            <a href="./pages/palette.html">
                 <article>
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
                     <span class="sticker">Nouveau</span>
@@ -65,11 +68,12 @@
                         <span class="like">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart full"></i>
+                            
                         </span>
                     </div>
                 </article>
             </a>
-            <a href="./pages/la-note-enchantee.html">
+            <a href="./pages/note.html">
                 <article>
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
                     <span class="sticker">Nouveau</span>
@@ -85,7 +89,7 @@
                     </div>
                 </article>
             </a>
-            <a href="./pages/a-la-francaise.html">
+            <a href="./pages/francaise.html">
                 <article>
                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" />
                     <div class="eatery-container">
@@ -100,7 +104,7 @@
                     </div>
                 </article>
             </a>
-            <a href="./pages/le-delice-des-sens.html">
+            <a href="./pages/delice.html">
                 <article>
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="Le délice des sens" />
@@ -119,8 +123,7 @@
         </section>
 
 
-
-
+      
     </main>
 
     <footer>
