modif on restaurants pages and scss

--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -23,7 +23,7 @@
 
     <section class="backimage">
         <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="backimage" alt="La palette" />
-    </div>
+    </section>
 
     <main class="pagemenu">
 
