--- a/pages/palette.html
+++ b/pages/palette.html
@@ -23,7 +23,7 @@
 
     <section class="backimage">
         <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="backimage" alt="La palette" />
-    </div>
+    </section>
 
     <main class="pagemenu">
 
