--- a/pages/delice.html
+++ b/pages/delice.html
@@ -23,7 +23,7 @@
 
     <section class="backimage">
         <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="backimage" alt="La palette" />
-    </div>
+    </section>
 
     <main class="pagemenu">
 
