--- a/pages/note.html
+++ b/pages/note.html
@@ -23,7 +23,7 @@
 
     <section class="backimage">
         <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="backimage" alt="La palette" />
-    </div>
+    </section>
 
     <main class="pagemenu">
 
