--- a/pages/note.html
+++ b/pages/note.html
@@ -110,7 +110,7 @@
 
             <article>
                 <div class="description">
-                    <h4>FLangoustine poêlée</h4>
+                    <h4>Langoustine poêlée</h4>
                     <div class="sub-title">
                         <span>Purée de patate douce</span>
                         <span class="price">35€</span>
