--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Restaurants</h2>
             <a href="./pages/palette.html">
                 <article>
-                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
                     <span class="sticker">Nouveau</span>
                     <div class="eatery-container">
                         <div class="eatery-desc">
@@ -74,7 +74,7 @@
             </a>
             <a href="./pages/note.html">
                 <article>
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
                     <span class="sticker">Nouveau</span>
                     <div class="eatery-container">
                         <div class="eatery-desc">
@@ -90,7 +90,7 @@
             </a>
             <a href="./pages/francaise.html">
                 <article>
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" />
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"/>
                     <div class="eatery-container">
                         <div class="eatery-desc">
                             <h3>À la française</h3>
@@ -105,8 +105,7 @@
             </a>
             <a href="./pages/delice.html">
                 <article>
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Le délice des sens" />
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
                     <div class="eatery-container">
                         <div class="eatery-desc">
                             <h3>Le délice des sens</h3>
