final changes on restaurants pages

--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -79,7 +79,7 @@
                 <i class="fa-solid fa-circle-check"></i>
             </span>
         </article>
-
+    </section>
       
 
     <section class="menu">
@@ -178,7 +178,7 @@
 
 
 
-</main>
+    </main>
     
     <footer>
         <h2>ohmyfood</h2>
