--- a/pages/note.html
+++ b/pages/note.html
@@ -78,6 +78,7 @@
                     <i class="fa-solid fa-circle-check"></i>
                 </span>
             </article>
+       
 
             <article>
                 <div class="description">
@@ -91,6 +92,7 @@
                     <i class="fa-solid fa-circle-check"></i>
                 </span>
             </article>
+        </section>
 
         <section class="menu">
             <h2>Plat</h2>
