--- a/pages/palette.html
+++ b/pages/palette.html
@@ -79,7 +79,7 @@
                     <i class="fa-solid fa-circle-check"></i>
                 </span>
             </article>
-
+        </section>
      
 
         <section class="menu">
